reflecting changes trial

--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
     </header>
 
     <!-- Hero Section -->
-    <section class="hero">
+    <!-- <section class="hero">
       <div class="container fade-in">
         <h1>Enhancing US Customs Brokerage & Freight Forwarders with AI</h1>
         <p>Meet your new AI agent: Fast filings, fewer errors, human focus.</p>
@@ -552,7 +552,7 @@
           <a href="#how-it-works" class="secondary-button">See How It Works</a>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- Value Props -->
     <section class="value-props" id="features">
